--- a/apple-main.css
+++ b/apple-main.css
@@ -393,6 +393,17 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  margin-bottom: 9px;
+}
+.a-product--airpodspro2 .a-product__title,
+.a-product--macbookair .a-product__title {
+  margin-bottom: 2px;
+}
+.a-product--watch .a-product__title,
+.a-product--tradein .a-product__title,
+.a-product--card .a-product__title {
+  margin-bottom: 4px;
+  color: rgba(0, 0, 0, 1);
 }
 .a-product--watch .a-product__title::before,
 .a-product--tradein .a-product__title::before,
@@ -405,73 +416,53 @@ header {
   display: inline-block;
   margin-right: 7px;
 }
-/* endees urgeljluulej */
-/* endees urgeljluulej */
-/* series nemehhhhhh */
-/* endees urgeljluulej */
-
-/* endees urgeljluulej */
-
-/* endees urgeljluulej */
-
-.apple-product__subtitle {
+.a-product--watch .a-product__midtitle {
+  font-size: 15px;
+  line-height: 100%;
+  font-weight: 700;
+  letter-spacing: 2px;
+  color: rgba(0, 0, 0, 1);
+  margin-bottom: 4px;
+}
+.a-product__subtitle {
   font-size: 18px;
   line-height: 25px;
-  color: rgba(29, 29, 31, 1);
-  width: 322px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
-.apple-product__subtitle--ipadair {
-  margin-top: 9px;
+.a-product--ipadair .a-product__subtitle {
   margin-bottom: 20px;
 }
-.apple-product__subtitle--airpodspro2 {
-  margin-top: 2px;
+.a-product--airpodspro2 .a-product__subtitle,
+.a-product--macbookair .a-product__subtitle {
   margin-bottom: 10px;
 }
-.apple-product__subtitle--watch,
-.apple-product__subtitle--tradein,
-.apple-product__subtitle--card {
-  margin-top: 4px;
+.a-product--watch .a-product__subtitle,
+.a-product--tradein .a-product__subtitle,
+.a-product--card .a-product__subtitle {
   margin-bottom: 16px;
 }
-.apple-product__subtitle--macbookair {
-  margin-top: 2px;
-  margin-bottom: 10px;
-}
-.apple-product__buttons {
+.a-product__buttons {
   display: flex;
-  gap: 16px;
   justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
+  gap: 16px;
 }
-.apple-product__button {
+.a-product__buttons .btn {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: -0.37px;
-  color: rgba(255, 255, 255, 1);
   padding: 10px 16px;
-  background-color: rgba(0, 113, 227, 1);
   border-radius: 20px;
   border: 1px solid transparent;
 }
-.apple-product__button:hover {
-  background-color: rgb(0 119 237);
-}
-.apple-product__button--transparent {
-  background-color: transparent;
-  border: 1px solid rgba(41, 151, 255, 1);
-  color: rgba(41, 151, 255, 1);
-  padding: 10px 20px;
-}
-.apple-product__button--transparent:hover {
+.a-product__buttons .btn--major {
+  background-color: rgba(0, 113, 227, 1);
   color: rgba(255, 255, 255, 1);
-  border: 1px solid transparent;
 }
-.apple-product__sub {
+.a-product__buttons .btn--minor {
+  background-color: transparent;
+  color: rgba(41, 151, 255, 1);
+  border: 1px solid rgba(41, 151, 255, 1);
+}
+.a-product__aisub {
   font-size: 14px;
   line-height: 18px;
   font-weight: 500;
@@ -487,6 +478,21 @@ header {
   color: transparent;
   display: inline-block;
 }
+@media (max-width: 768px) {
+  .a-product--ipadair {
+    width: 100%;
+  }
+  .a-product--smallbusiness,
+  .a-product--carrierdeals {
+    display: block;
+  }
+}
+
+/* endees urgeljluulej */
+/* endees urgeljluulej */
+/* series nemehhhhhh */
+/* endees urgeljluulej */
+
 /* apple tv scroll */
 .tv-scroller {
   max-width: 1920px;
