--- a/apple-main.css
+++ b/apple-main.css
@@ -10,6 +10,8 @@ header {
   gap: 24px;
   align-items: center;
   justify-content: center;
+  position: sticky;
+  top: 0;
 }
 .header-logo {
   width: 30px;
@@ -28,9 +30,6 @@ header {
   letter-spacing: -0.28px;
   text-decoration: none;
   color: rgba(0, 0, 0, 1);
-}
-.header-nav .item:hover {
-  color: rgba(0, 0, 0, 0.8);
 }
 .header-buttons {
   display: flex;
@@ -98,6 +97,7 @@ header {
   /* banner */
   .banner__text {
     padding: 6.5px 31px;
+    margin-bottom: 12px;
   }
 }
 /* iPhone 16 Pro */
@@ -110,7 +110,6 @@ header {
   text-align: center;
   padding-top: 55px;
   box-sizing: border-box;
-  margin-top: 12px;
   color: rgba(245, 245, 247, 1);
 }
 .iphone16pro__title {
@@ -129,7 +128,6 @@ header {
   display: flex;
   gap: 16px;
   justify-content: center;
-  align-items: center;
 }
 .iphone16pro__buttons .btn {
   font-size: 16px;
@@ -173,7 +171,6 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding-top: 0;
     padding-bottom: 36px;
   }
   .iphone16pro__title {
@@ -224,14 +221,13 @@ header {
   display: flex;
   gap: 16px;
   justify-content: center;
-  align-items: center;
 }
 .iphone16__buttons .btn {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: -0.37px;
   border-radius: 22px;
-  border: 1px solid transparent;
+  border: 1px solid rgba(255, 255, 255, 1);
   padding: 12px 20px;
 }
 .iphone16__buttons .btn--major {
@@ -240,7 +236,6 @@ header {
 }
 .iphone16__buttons .btn--minor {
   background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, 1);
 }
 @media (max-width: 768px) {
@@ -299,6 +294,7 @@ header {
   padding-bottom: 82px;
   box-sizing: border-box;
   text-align: center;
+  color: rgba(0, 0, 0, 1);
   margin-top: 12px;
 }
 .giftmagic__title {
@@ -306,24 +302,22 @@ header {
   line-height: 60px;
   letter-spacing: -0.28px;
   font-weight: 600;
-  color: rgba(0, 0, 0, 1);
   margin-bottom: 12px;
 }
 .giftmagic__subtitle {
   font-size: 24px;
   line-height: 32px;
-  color: rgba(0, 0, 0, 1);
   margin-bottom: 16px;
 }
 .giftmagic__buttons .btn {
   font-size: 16px;
   line-height: 20px;
   letter-spacing: -0.37px;
-  color: rgba(255, 255, 255, 1);
-  background-color: rgba(0, 113, 227, 1);
   padding: 12px 20px;
   border-radius: 22px;
-  border: none;
+  border: 1px solid transparent;
+  background-color: rgba(0, 113, 227, 1);
+  color: rgba(255, 255, 255, 1);
 }
 @media (max-width: 768px) {
   .giftmagic {
@@ -357,6 +351,11 @@ header {
 }
 .a-product--airpodspro2 {
   background-image: url(images/prod-airpodspro2.png);
+  color: rgba(245, 245, 247, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 58px;
 }
 .a-product--watch {
   background-image: url(images/prod-watch.png);
@@ -375,21 +374,12 @@ header {
 .a-product--card {
   background-image: url(images/prod-card.png);
 }
-.a-product--airpodspro2 {
-  color: rgba(245, 245, 247, 1);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-top: 0;
-  padding-bottom: 58px;
-}
 .a-product__title {
   font-size: 36px;
   line-height: 44px;
   font-weight: 600;
 }
 .a-product--ipadair .a-product__title {
-  width: 100%;
   height: 33px;
   background-image: url(images/prod-title-ipadair.svg);
   background-repeat: no-repeat;
@@ -464,14 +454,10 @@ header {
   color: rgba(41, 151, 255, 1);
   border: 1px solid rgba(41, 151, 255, 1);
 }
-.a-product__aisub {
+.a-product--ipadair .a-product__aisub {
   font-size: 14px;
   line-height: 18px;
   font-weight: 500;
-  position: absolute;
-  bottom: 53px;
-  left: 0;
-  right: 0;
   background: linear-gradient(
     94deg,
     rgba(0, 144, 247, 1),
@@ -482,6 +468,10 @@ header {
   background-clip: text;
   color: transparent;
   display: inline-block;
+  position: absolute;
+  bottom: 53px;
+  left: 0;
+  right: 0;
 }
 @media (max-width: 768px) {
   .a-product {
